overflow email fixed

--- a/css/layouts/side-menu.css
+++ b/css/layouts/side-menu.css
@@ -1,7 +1,5 @@
 body {
-    color: #777;
     font-family: 'Lora', serif;
-
 }
 
 .pure-img-responsive {
